[package]
name = "ethers-ws-events"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde_json = "1.0.66"
